Implement filters utilities.

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -46,15 +46,16 @@
     "│   ├── base.ipynb       # Base classes, types, and protocols for Tailwind CSS abstractions\n",
     "│   ├── resources.ipynb  # CDN resources and headers for Tailwind CSS\n",
     "│   └── testing.ipynb    # Standardized test page creation for Jupyter notebooks with FastHTML\n",
-    "└── utilities/ (5)\n",
+    "└── utilities/ (6)\n",
     "    ├── backgrounds.ipynb       # Background utilities for Tailwind CSS\n",
+    "    ├── filters.ipynb           # Filter utilities for Tailwind CSS\n",
     "    ├── flexbox_and_grid.ipynb  # Flexbox and CSS Grid utilities for Tailwind CSS\n",
     "    ├── layout.ipynb            # Display, position, overflow, z-index and other layout utilities for Tailwind CSS\n",
     "    ├── sizing.ipynb            # Width, height, and min/max sizing utilities for Tailwind CSS\n",
     "    └── spacing.ipynb           # Padding and margin utilities for Tailwind CSS\n",
     "```\n",
     "\n",
-    "Total: 20 notebooks across 4 directories"
+    "Total: 21 notebooks across 4 directories"
    ]
   },
   {
@@ -81,6 +82,7 @@
     "    core_resources[core.resources<br/>resources]\n",
     "    core_testing[core.testing<br/>testing]\n",
     "    utilities_backgrounds[utilities.backgrounds<br/>backgrounds]\n",
+    "    utilities_filters[utilities.filters<br/>filters]\n",
     "    utilities_flexbox_and_grid[utilities.flexbox_and_grid<br/>flexbox_and_grid]\n",
     "    utilities_layout[utilities.layout<br/>layout]\n",
     "    utilities_sizing[utilities.sizing<br/>sizing]\n",
@@ -89,50 +91,53 @@
     "    builders_colors --> core_base\n",
     "    builders_scales --> core_base\n",
     "    cli_example_discovery --> cli_utils\n",
-    "    cli_explorer --> cli_test_code\n",
     "    cli_explorer --> cli_pattern_scanner\n",
     "    cli_explorer --> cli_utils\n",
-    "    cli_explorer --> cli_imports\n",
-    "    cli_explorer --> cli_search\n",
-    "    cli_explorer --> cli_factory_extraction\n",
-    "    cli_explorer --> cli_example_discovery\n",
-    "    cli_explorer --> cli_helper_discovery\n",
     "    cli_explorer --> cli_core_utils_discovery\n",
+    "    cli_explorer --> cli_factory_extraction\n",
+    "    cli_explorer --> cli_imports\n",
+    "    cli_explorer --> cli_example_discovery\n",
+    "    cli_explorer --> cli_search\n",
+    "    cli_explorer --> cli_test_code\n",
+    "    cli_explorer --> cli_helper_discovery\n",
     "    cli_factory_extraction --> cli_utils\n",
     "    cli_factory_extraction --> core_base\n",
-    "    cli_helper_discovery --> cli_example_discovery\n",
     "    cli_helper_discovery --> cli_utils\n",
-    "    cli_imports --> cli_helper_discovery\n",
-    "    cli_imports --> cli_factory_extraction\n",
+    "    cli_helper_discovery --> cli_example_discovery\n",
     "    cli_imports --> cli_core_utils_discovery\n",
+    "    cli_imports --> cli_factory_extraction\n",
+    "    cli_imports --> cli_helper_discovery\n",
     "    cli_imports --> cli_utils\n",
-    "    cli_search --> cli_factory_extraction\n",
     "    cli_search --> cli_utils\n",
+    "    cli_search --> cli_factory_extraction\n",
     "    cli_search --> cli_helper_discovery\n",
     "    cli_search --> cli_example_discovery\n",
-    "    cli_test_code --> cli_helper_discovery\n",
     "    cli_test_code --> cli_factory_extraction\n",
+    "    cli_test_code --> cli_helper_discovery\n",
     "    cli_test_code --> cli_utils\n",
     "    core_testing --> utilities_flexbox_and_grid\n",
-    "    core_testing --> utilities_spacing\n",
     "    core_testing --> utilities_sizing\n",
     "    core_testing --> utilities_layout\n",
+    "    core_testing --> utilities_spacing\n",
     "    core_testing --> core_resources\n",
     "    core_testing --> core_base\n",
     "    utilities_backgrounds --> core_base\n",
-    "    utilities_backgrounds --> builders_scales\n",
     "    utilities_backgrounds --> builders_colors\n",
+    "    utilities_backgrounds --> builders_scales\n",
+    "    utilities_filters --> core_base\n",
+    "    utilities_filters --> builders_colors\n",
+    "    utilities_filters --> builders_scales\n",
     "    utilities_flexbox_and_grid --> core_base\n",
     "    utilities_flexbox_and_grid --> builders_scales\n",
     "    utilities_layout --> core_base\n",
     "    utilities_layout --> builders_scales\n",
-    "    utilities_sizing --> core_base\n",
     "    utilities_sizing --> builders_scales\n",
+    "    utilities_sizing --> core_base\n",
     "    utilities_spacing --> core_base\n",
     "    utilities_spacing --> builders_scales\n",
     "```\n",
     "\n",
-    "*44 cross-module dependencies detected*"
+    "*47 cross-module dependencies detected*"
    ]
   },
   {
@@ -208,7 +213,7 @@
     "\n",
     "Key Concepts:\n",
     "  - Factories: Objects that generate CSS classes (e.g., bg, bg_attachment, bg_clip, bg_conic)\n",
-    "  - Modules: Categories of utilities (backgrounds, flexbox_and_grid, layout, etc.)\n",
+    "  - Modules: Categories of utilities (backgrounds, filters, flexbox_and_grid, etc.)\n",
     "  - Examples: Test functions demonstrating usage patterns\n",
     "  - Helpers: Convenience functions for common patterns\n",
     "\n",
@@ -1466,6 +1471,172 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### filters (`filters.ipynb`)\n",
+    "> Filter utilities for Tailwind CSS\n",
+    "\n",
+    "#### Import\n",
+    "\n",
+    "```python\n",
+    "from cjm_fasthtml_tailwind.utilities.filters import (\n",
+    "    filter_none,\n",
+    "    BLUR_SCALES,\n",
+    "    blur,\n",
+    "    BRIGHTNESS_VALUES,\n",
+    "    brightness_config,\n",
+    "    brightness,\n",
+    "    CONTRAST_VALUES,\n",
+    "    contrast,\n",
+    "    DROP_SHADOW_SCALES,\n",
+    "    drop_shadow,\n",
+    "    drop_shadow_color,\n",
+    "    grayscale,\n",
+    "    HUE_ROTATE_VALUES,\n",
+    "    hue_rotate_config,\n",
+    "    hue_rotate,\n",
+    "    invert,\n",
+    "    SATURATE_VALUES,\n",
+    "    saturate,\n",
+    "    sepia,\n",
+    "    backdrop_filter_none,\n",
+    "    backdrop_blur,\n",
+    "    backdrop_brightness,\n",
+    "    backdrop_contrast,\n",
+    "    backdrop_saturate,\n",
+    "    backdrop_opacity,\n",
+    "    backdrop_grayscale,\n",
+    "    backdrop_sepia,\n",
+    "    backdrop_hue_rotate,\n",
+    "    test_filters_control_examples,\n",
+    "    BlurScale,\n",
+    "    test_filters_blur_examples,\n",
+    "    test_filters_brightness_examples,\n",
+    "    test_filters_contrast_examples,\n",
+    "    DropShadowScale,\n",
+    "    test_filters_drop_shadow_examples,\n",
+    "    test_filters_grayscale_examples,\n",
+    "    test_filters_hue_rotate_examples,\n",
+    "    test_filters_invert_examples,\n",
+    "    test_filters_saturate_examples,\n",
+    "    test_filters_sepia_examples,\n",
+    "    test_filters_backdrop_examples,\n",
+    "    test_filters_practical_examples,\n",
+    "    test_filters_factory_documentation\n",
+    ")\n",
+    "```\n",
+    "\n",
+    "#### Functions\n",
+    "\n",
+    "```python\n",
+    "def test_filters_control_examples()\n",
+    "    \"Test filter control utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_filters_blur_examples()\n",
+    "    \"Test blur filter utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_filters_brightness_examples()\n",
+    "    \"Test brightness filter utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_filters_contrast_examples()\n",
+    "    \"Test contrast filter utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_filters_drop_shadow_examples()\n",
+    "    \"Test drop shadow filter utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_filters_grayscale_examples()\n",
+    "    \"Test grayscale filter utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_filters_hue_rotate_examples()\n",
+    "    \"Test hue rotate filter utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_filters_invert_examples()\n",
+    "    \"Test invert filter utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_filters_saturate_examples()\n",
+    "    \"Test saturate filter utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_filters_sepia_examples()\n",
+    "    \"Test sepia filter utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_filters_backdrop_examples()\n",
+    "    \"Test backdrop filter utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_filters_practical_examples()\n",
+    "    \"Test filter utilities in practical FastHTML component examples.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_filters_factory_documentation()\n",
+    "    \"Test that filter factories have accessible documentation.\"\n",
+    "```\n",
+    "\n",
+    "#### Classes\n",
+    "\n",
+    "```python\n",
+    "@dataclass\n",
+    "class BlurScale:\n",
+    "    \"Represents a blur scale with name and pixel value.\"\n",
+    "    \n",
+    "    name: str\n",
+    "    pixels: str\n",
+    "    var: str\n",
+    "    \n",
+    "    def format(self) -> str\n",
+    "        \"Format as Tailwind class suffix.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "@dataclass\n",
+    "class DropShadowScale:\n",
+    "    \"Represents a drop shadow scale with name and shadow value.\"\n",
+    "    \n",
+    "    name: str\n",
+    "    shadow: str\n",
+    "    var: str\n",
+    "    \n",
+    "    def format(self) -> str\n",
+    "        \"Format as Tailwind class suffix.\"\n",
+    "```\n",
+    "\n",
+    "#### Variables\n",
+    "\n",
+    "```python\n",
+    "filter_none  # Remove filters\n",
+    "BLUR_SCALES = [7 items]\n",
+    "BRIGHTNESS_VALUES = [11 items]\n",
+    "CONTRAST_VALUES = [7 items]\n",
+    "DROP_SHADOW_SCALES = [6 items]\n",
+    "HUE_ROTATE_VALUES = [6 items]\n",
+    "SATURATE_VALUES = [5 items]\n",
+    "backdrop_filter_none  # Remove backdrop filters\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### flexbox_and_grid (`flexbox_and_grid.ipynb`)\n",
     "> Flexbox and CSS Grid utilities for Tailwind CSS\n",
     "\n",
@@ -2158,79 +2329,79 @@
     "\n",
     "```python\n",
     "def test_layout_display_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test display utilities with various values.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_layout_position_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test position utilities.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_layout_inset_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test inset utilities for positioning elements.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_layout_overflow_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test overflow utilities for content handling.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_layout_z_index_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test z-index utilities for stack ordering.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_layout_float_clear_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test float and clear utilities for content wrapping.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_layout_object_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test object fit and position utilities.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_layout_visibility_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test visibility and box sizing utilities.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_layout_aspect_columns_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test aspect ratio and columns utilities.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_layout_columns_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test columns utilities.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_layout_other_utilities_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test isolation, break, box decoration, and overscroll utilities.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_layout_practical_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test layout utilities in practical FastHTML component examples.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_layout_factory_documentation(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test that factories have accessible documentation.\"\n",
     "```\n",
     "\n",
@@ -2262,7 +2433,7 @@
     "\n",
     "```python\n",
     "def test_layout_helper_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test helper functions for common layout patterns.\"\n",
     "```\n",
     "\n",
@@ -3110,85 +3281,85 @@
     "\n",
     "```python\n",
     "def test_sizing_width_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test width utilities with various scales and values.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_sizing_width_named_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test width utilities with named container sizes.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_sizing_width_viewport_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test width utilities with viewport units.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_sizing_arbitrary_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test sizing utilities with arbitrary and custom values.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_sizing_height_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test height utilities with various scales and values.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_sizing_height_viewport_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test height utilities with viewport units.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_sizing_min_width_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test min-width utilities.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_sizing_max_width_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test max-width utilities.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_sizing_container_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test continer utility.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_sizing_min_height_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test min-height utilities.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_sizing_size_util_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test size utilities that set both width and height.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_sizing_max_height_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test max-height utilities.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_sizing_practical_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test sizing utilities in practical FastHTML component examples.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_sizing_factory_documentation(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test that factories have accessible documentation.\"\n",
     "```\n",
     "\n",
@@ -3225,7 +3396,7 @@
     "\n",
     "```python\n",
     "def test_sizing_helper_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test helper functions for common sizing patterns.\"\n",
     "```\n",
     "\n",
@@ -3281,55 +3452,55 @@
     "\n",
     "```python\n",
     "def test_spacing_basic_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test basic padding utilities with various scale values.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_spacing_directional_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test directional padding utilities.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_spacing_arbitrary_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test padding utilities with arbitrary and custom values.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_spacing_margin_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test basic margin utilities with various scale values.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_spacing_margin_directional_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test directional margin utilities.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_spacing_negative_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test negative margin utilities.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_spacing_logical_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test logical properties for padding and margin utilities.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_spacing_space_between_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test space between child elements utilities.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_spacing_practical_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test spacing utilities in practical FastHTML component examples.\"\n",
     "```\n",
     "\n",
@@ -3362,13 +3533,13 @@
     "\n",
     "```python\n",
     "def test_spacing_helper_examples(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test helper functions for common spacing patterns.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def test_spacing_factory_documentation(\n",
-    "): # TODO: Add type hint\n",
+    ")\n",
     "    \"Test that factories have accessible documentation.\"\n",
     "```\n",
     "\n",
