Implement svg utilities.

--- a/nbs/builders/colors.ipynb
+++ b/nbs/builders/colors.ipynb
@@ -333,10 +333,13 @@
     "    def opacity(\n",
     "        self,\n",
     "        value: Union[int, str]  # Opacity value (0-100 or arbitrary)\n",
-    "    ) -> 'ColoredUtility':  # Self for chaining\n",
-    "        \"\"\"Set opacity value.\"\"\"\n",
-    "        self._opacity = value\n",
-    "        return self"
+    "    ) -> 'ColoredUtility':  # A new instance with opacity set\n",
+    "        \"\"\"Return a new ColoredUtility instance with opacity value.\"\"\"\n",
+    "        # Create a new instance to avoid modifying the original\n",
+    "        new_instance = ColoredUtility(self.prefix, self._color, value)\n",
+    "        new_instance._modifiers = self._modifiers.copy() if self._modifiers else []\n",
+    "        new_instance._value = self._value\n",
+    "        return new_instance"
    ]
   },
   {
@@ -515,10 +518,19 @@
    "execution_count": null,
    "id": "7409f027-1993-4476-bd14-87dc809f72fc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bg-red-500\n"
+     ]
+    }
+   ],
    "source": [
     "# Test basic color usage\n",
     "bg = ColoredFactory(\"bg\", \"Background color utilities\")\n",
+    "print(bg.red._500)\n",
     "\n",
     "# Test standard color-shade combinations\n",
     "assert str(bg.red._500) == \"bg-red-500\"\n",
@@ -736,6 +748,12 @@
     "    \n",
     "    # Test opacity in factory call\n",
     "    assert str(bg(\"green-600\", opacity=25)) == \"bg-green-600/25\"\n",
+    "    \n",
+    "    # Test that opacity doesn't persist (bug fix)\n",
+    "    red_500 = bg.red._500\n",
+    "    assert str(red_500) == \"bg-red-500\"\n",
+    "    assert str(red_500.opacity(50)) == \"bg-red-500/50\"\n",
+    "    assert str(red_500) == \"bg-red-500\"  # Should still be without opacity\n",
     "\n",
     "# Run the test\n",
     "test_colors_opacity_examples()"
