--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -46,16 +46,17 @@
     "│   ├── base.ipynb       # Base classes, types, and protocols for Tailwind CSS abstractions\n",
     "│   ├── resources.ipynb  # CDN resources and headers for Tailwind CSS\n",
     "│   └── testing.ipynb    # Standardized test page creation for Jupyter notebooks with FastHTML\n",
-    "└── utilities/ (6)\n",
+    "└── utilities/ (7)\n",
     "    ├── backgrounds.ipynb       # Background utilities for Tailwind CSS\n",
     "    ├── filters.ipynb           # Filter utilities for Tailwind CSS\n",
     "    ├── flexbox_and_grid.ipynb  # Flexbox and CSS Grid utilities for Tailwind CSS\n",
     "    ├── layout.ipynb            # Display, position, overflow, z-index and other layout utilities for Tailwind CSS\n",
     "    ├── sizing.ipynb            # Width, height, and min/max sizing utilities for Tailwind CSS\n",
-    "    └── spacing.ipynb           # Padding and margin utilities for Tailwind CSS\n",
+    "    ├── spacing.ipynb           # Padding and margin utilities for Tailwind CSS\n",
+    "    └── svg.ipynb               # SVG utilities for Tailwind CSS\n",
     "```\n",
     "\n",
-    "Total: 21 notebooks across 4 directories"
+    "Total: 22 notebooks across 4 directories"
    ]
   },
   {
@@ -87,57 +88,61 @@
     "    utilities_layout[utilities.layout<br/>layout]\n",
     "    utilities_sizing[utilities.sizing<br/>sizing]\n",
     "    utilities_spacing[utilities.spacing<br/>spacing]\n",
+    "    utilities_svg[utilities.svg<br/>svg]\n",
     "\n",
     "    builders_colors --> core_base\n",
     "    builders_scales --> core_base\n",
     "    cli_example_discovery --> cli_utils\n",
-    "    cli_explorer --> cli_pattern_scanner\n",
-    "    cli_explorer --> cli_utils\n",
     "    cli_explorer --> cli_core_utils_discovery\n",
     "    cli_explorer --> cli_factory_extraction\n",
+    "    cli_explorer --> cli_utils\n",
+    "    cli_explorer --> cli_helper_discovery\n",
+    "    cli_explorer --> cli_search\n",
+    "    cli_explorer --> cli_pattern_scanner\n",
+    "    cli_explorer --> cli_test_code\n",
     "    cli_explorer --> cli_imports\n",
     "    cli_explorer --> cli_example_discovery\n",
-    "    cli_explorer --> cli_search\n",
-    "    cli_explorer --> cli_test_code\n",
-    "    cli_explorer --> cli_helper_discovery\n",
     "    cli_factory_extraction --> cli_utils\n",
     "    cli_factory_extraction --> core_base\n",
-    "    cli_helper_discovery --> cli_utils\n",
     "    cli_helper_discovery --> cli_example_discovery\n",
+    "    cli_helper_discovery --> cli_utils\n",
     "    cli_imports --> cli_core_utils_discovery\n",
-    "    cli_imports --> cli_factory_extraction\n",
     "    cli_imports --> cli_helper_discovery\n",
+    "    cli_imports --> cli_factory_extraction\n",
     "    cli_imports --> cli_utils\n",
     "    cli_search --> cli_utils\n",
-    "    cli_search --> cli_factory_extraction\n",
-    "    cli_search --> cli_helper_discovery\n",
     "    cli_search --> cli_example_discovery\n",
-    "    cli_test_code --> cli_factory_extraction\n",
+    "    cli_search --> cli_helper_discovery\n",
+    "    cli_search --> cli_factory_extraction\n",
     "    cli_test_code --> cli_helper_discovery\n",
+    "    cli_test_code --> cli_factory_extraction\n",
     "    cli_test_code --> cli_utils\n",
-    "    core_testing --> utilities_flexbox_and_grid\n",
     "    core_testing --> utilities_sizing\n",
     "    core_testing --> utilities_layout\n",
-    "    core_testing --> utilities_spacing\n",
+    "    core_testing --> utilities_flexbox_and_grid\n",
     "    core_testing --> core_resources\n",
+    "    core_testing --> utilities_spacing\n",
     "    core_testing --> core_base\n",
     "    utilities_backgrounds --> core_base\n",
     "    utilities_backgrounds --> builders_colors\n",
     "    utilities_backgrounds --> builders_scales\n",
-    "    utilities_filters --> core_base\n",
     "    utilities_filters --> builders_colors\n",
+    "    utilities_filters --> core_base\n",
     "    utilities_filters --> builders_scales\n",
-    "    utilities_flexbox_and_grid --> core_base\n",
     "    utilities_flexbox_and_grid --> builders_scales\n",
-    "    utilities_layout --> core_base\n",
+    "    utilities_flexbox_and_grid --> core_base\n",
     "    utilities_layout --> builders_scales\n",
+    "    utilities_layout --> core_base\n",
     "    utilities_sizing --> builders_scales\n",
     "    utilities_sizing --> core_base\n",
-    "    utilities_spacing --> core_base\n",
     "    utilities_spacing --> builders_scales\n",
+    "    utilities_spacing --> core_base\n",
+    "    utilities_svg --> core_base\n",
+    "    utilities_svg --> builders_scales\n",
+    "    utilities_svg --> builders_colors\n",
     "```\n",
     "\n",
-    "*47 cross-module dependencies detected*"
+    "*50 cross-module dependencies detected*"
    ]
   },
   {
@@ -899,8 +904,8 @@
     "    def opacity(\n",
     "            self,\n",
     "            value: Union[int, str]  # Opacity value (0-100 or arbitrary)\n",
-    "        ) -> 'ColoredUtility':  # Self for chaining\n",
-    "        \"Set opacity value.\"\n",
+    "        ) -> 'ColoredUtility':  # A new instance with opacity set\n",
+    "        \"Return a new ColoredUtility instance with opacity value.\"\n",
     "```\n",
     "\n",
     "```python\n",
@@ -3589,6 +3594,179 @@
     "ms  # margin-inline-start\n",
     "me  # margin-inline-end\n",
     "space  # The space factory\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### svg (`svg.ipynb`)\n",
+    "> SVG utilities for Tailwind CSS\n",
+    "\n",
+    "#### Import\n",
+    "\n",
+    "```python\n",
+    "from cjm_fasthtml_tailwind.utilities.svg import (\n",
+    "    fill_none,\n",
+    "    fill,\n",
+    "    stroke_none,\n",
+    "    stroke,\n",
+    "    STROKE_WIDTH_CONFIG,\n",
+    "    stroke_width,\n",
+    "    test_svg_fill_examples,\n",
+    "    test_svg_fill_opacity_examples,\n",
+    "    test_svg_fill_arbitrary_examples,\n",
+    "    test_svg_stroke_examples,\n",
+    "    test_svg_stroke_opacity_examples,\n",
+    "    StrokeWidthFactory,\n",
+    "    test_svg_stroke_width_examples,\n",
+    "    test_svg_stroke_width_arbitrary_examples,\n",
+    "    test_svg_practical_examples,\n",
+    "    test_svg_icon_examples,\n",
+    "    test_svg_progress_ring_examples,\n",
+    "    test_svg_factory_documentation,\n",
+    "    test_svg_edge_cases,\n",
+    "    svg_icon_classes,\n",
+    "    test_svg_helper_functions\n",
+    ")\n",
+    "```\n",
+    "\n",
+    "#### Functions\n",
+    "\n",
+    "```python\n",
+    "def test_svg_fill_examples()\n",
+    "    \"Test fill color utilities with various color values.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_svg_fill_opacity_examples()\n",
+    "    \"Test fill colors with opacity modifiers.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_svg_fill_arbitrary_examples()\n",
+    "    \"Test fill utilities with arbitrary and custom values.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_svg_stroke_examples()\n",
+    "    \"Test stroke color utilities with various color values.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_svg_stroke_opacity_examples()\n",
+    "    \"Test stroke colors with opacity modifiers.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_svg_stroke_width_examples()\n",
+    "    \"Test stroke width utilities with various values.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_svg_stroke_width_arbitrary_examples()\n",
+    "    \"Test stroke width utilities with arbitrary and custom values.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_svg_practical_examples()\n",
+    "    \"Test SVG utilities in practical FastHTML component examples.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_svg_icon_examples():\n",
+    "    \"\"\"Test creating reusable SVG icon components.\"\"\"\n",
+    "    from fasthtml.common import Div\n",
+    "    from fasthtml.svg import Svg, Path\n",
+    "    \n",
+    "    # Helper function to create an icon\n",
+    "    def Icon(path_d: str, size: str = \"6\", color_cls: str = \"\")\n",
+    "    \"Test creating reusable SVG icon components.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_svg_progress_ring_examples():\n",
+    "    \"\"\"Test creating a progress ring component.\"\"\"\n",
+    "    from fasthtml.common import Div\n",
+    "    from fasthtml.svg import Svg, Circle\n",
+    "    \n",
+    "    # Progress ring component\n",
+    "    def ProgressRing(percentage: int, size: int = 120)\n",
+    "    \"Test creating a progress ring component.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_svg_factory_documentation()\n",
+    "    \"Test that SVG factories have accessible documentation.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_svg_edge_cases()\n",
+    "    \"Test edge cases and special values for SVG utilities.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def svg_icon_classes(\n",
+    "    fill_color: Optional[str] = None,  # Fill color class or utility\n",
+    "    stroke_color: Optional[str] = None,  # Stroke color class or utility\n",
+    "    width: Union[int, str] = 2,  # Stroke width value\n",
+    "    size: str = \"6\",  # Icon size (for w-{size} h-{size})\n",
+    "    extra_classes: str = \"\"  # Additional classes to include\n",
+    ") -> str:  # Combined class string for SVG icon\n",
+    "    \"Generate common SVG icon classes.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_svg_helper_functions()\n",
+    "    \"Test SVG helper functions.\"\n",
+    "```\n",
+    "\n",
+    "#### Classes\n",
+    "\n",
+    "```python\n",
+    "class StrokeWidthFactory:\n",
+    "    def __init__(self):\n",
+    "        \"\"\"Initialize with stroke width configuration.\"\"\"\n",
+    "        super().__init__(\"stroke\", STROKE_WIDTH_CONFIG, \"Stroke width utilities for styling the stroke width of SVG elements\")\n",
+    "        # Override the numeric scale to only include 0, 1, 2\n",
+    "        self._valid_values = [0, 1, 2]\n",
+    "    \n",
+    "    def __call__(\n",
+    "        self,\n",
+    "        value: Optional[TailwindValue] = None,  # The stroke width value\n",
+    "        negative: bool = False  # Not applicable for stroke width\n",
+    "    ) -> StandardUtility:  # A stroke width utility instance\n",
+    "    \"Factory for stroke-width utilities with restricted numeric scale (0-2).\"\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "            \"\"\"Initialize with stroke width configuration.\"\"\"\n",
+    "            super().__init__(\"stroke\", STROKE_WIDTH_CONFIG, \"Stroke width utilities for styling the stroke width of SVG elements\")\n",
+    "            # Override the numeric scale to only include 0, 1, 2\n",
+    "            self._valid_values = [0, 1, 2]\n",
+    "        \n",
+    "        def __call__(\n",
+    "            self,\n",
+    "            value: Optional[TailwindValue] = None,  # The stroke width value\n",
+    "            negative: bool = False  # Not applicable for stroke width\n",
+    "        ) -> StandardUtility:  # A stroke width utility instance\n",
+    "        \"Initialize with stroke width configuration.\"\n",
+    "    \n",
+    "    def get_info(\n",
+    "            self\n",
+    "        ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"Get detailed information about the stroke width factory.\"\n",
+    "```\n",
+    "\n",
+    "#### Variables\n",
+    "\n",
+    "```python\n",
+    "fill_none  # Remove fill\n",
+    "fill  # The fill color factory\n",
+    "stroke_none  # Remove stroke\n",
+    "stroke  # The stroke color factory\n",
+    "STROKE_WIDTH_CONFIG\n",
+    "stroke_width  # The stroke width factory\n",
     "```"
    ]
   },
